[package]
name = "scopes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bimap = "0.6.2"
log = "0.4.0"
env_logger = "0.9.0"
derive_more = "0.99.0"
num = "0.4.0"
flate2 = "1.0.25"
libc = "0.2.139"